## reward_popup.gd
## å¥–åŠ±å¼¹çª—è„šæœ¬
extends Control

signal popup_closed()

@onready var title_label: Label = $Panel/VBox/TitleLabel
@onready var rewards_container: VBoxContainer = $Panel/VBox/ScrollContainer/RewardsContainer
@onready var confirm_button: Button = $Panel/VBox/ConfirmButton

func _ready() -> void:
	if confirm_button:
		confirm_button.pressed.connect(_on_confirm_pressed)


## è®¾ç½®å¥–åŠ±
func set_rewards(rewards: Dictionary) -> void:
	if not rewards_container:
		return

	# æ¸…ç©ºçŽ°æœ‰å†…å®¹
	for child in rewards_container.get_children():
		child.queue_free()

	# æ·»åŠ å¥–åŠ±é¡¹
	if rewards.has("gold") and rewards["gold"] > 0:
		_add_reward_item("ðŸª™", "é‡‘å¸", str(rewards["gold"]))
	if rewards.has("exp") and rewards["exp"] > 0:
		_add_reward_item("â­", "ç»éªŒ", str(rewards["exp"]))
	if rewards.has("energy") and rewards["energy"] > 0:
		_add_reward_item("ðŸ’œ", "èƒ½é‡", str(rewards["energy"]))
	if rewards.has("diamonds") and rewards["diamonds"] > 0:
		_add_reward_item("ðŸ’Ž", "é’»çŸ³", str(rewards["diamonds"]))


## æ·»åŠ å¥–åŠ±é¡¹
func _add_reward_item(icon: String, name: String, value: String) -> void:
	if not rewards_container:
		return

	var hbox := HBoxContainer.new()
	hbox.add_theme_constant_override("separation", 15)

	var icon_label := Label.new()
	icon_label.text = icon
	icon_label.add_theme_font_size_override("font_size", 32)
	hbox.add_child(icon_label)

	var name_label := Label.new()
	name_label.text = name
	name_label.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	hbox.add_child(name_label)

	var value_label := Label.new()
	value_label.text = value
	value_label.add_theme_font_size_override("font_size", 18)
	value_label.add_theme_color_override("font_color", Color(0.8, 0.8, 0.6))
	hbox.add_child(value_label)

	rewards_container.add_child(hbox)


## ç¡®è®¤æŒ‰é’®ç‚¹å‡»
func _on_confirm_pressed() -> void:
	popup_closed.emit()
	queue_free()
